# rustmon

./: .gitignore  Cargo.toml  README.md  install.sh  output_pokemon.json  pokemon.bak.json  pokemon.json
.github/workflows/: build.yml  cargo.yml  testing.yml
colorscripts/big/regular/: abomasnow  abomasnow-mega  abra  absol  absol-mega  accelgor  aegislash  aegislash-blade  aerodactyl  aerodactyl-mega  aggron  aggron-mega  aipom  alakazam  alakazam-mega  alcremie  alcremie-caramel-swirl-berry  alcremie-caramel-swirl-clover  alcremie-caramel-swirl-flower  alcremie-caramel-swirl-love  alcremie-caramel-swirl-plain  alcremie-caramel-swirl-ribbon  alcremie-caramel-swirl-star  alcremie-caramel-swirl-strawberry  alcremie-gmax  alcremie-lemon-cream-berry  alcremie-lemon-cream-clover  alcremie-lemon-cream-flower  alcremie-lemon-cream-love  alcremie-lemon-cream-plain  alcremie-lemon-cream-ribbon  alcremie-lemon-cream-star  alcremie-lemon-cream-strawberry  alcremie-matcha-cream-berry  alcremie-matcha-cream-clover  alcremie-matcha-cream-flower  alcremie-matcha-cream-love  alcremie-matcha-cream-plain  alcremie-matcha-cream-ribbon  alcremie-matcha-cream-star  (+1281 more)
colorscripts/big/shiny/: abomasnow  abomasnow-mega  abra  absol  absol-mega  accelgor  aegislash  aegislash-blade  aerodactyl  aerodactyl-mega  aggron  aggron-mega  aipom  alakazam  alakazam-mega  alcremie-gmax  alcremie-matcha-cream-flower  alcremie-matcha-cream-plain  alomomola  (+1240 more)
src/: args.rs  constants.rs  fetch.rs  lib.rs  list.rs  main.rs  print.rs  say.rs  structs.rs  validation.rs
testing/: testing.fuck  testing.py
(+2580 files in other folders)
