[package]
name = "rustmon"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }

# clap = "2.0.0"
rand = { version = "0.8.4", features = ["small_rng"] }
serde_json = "1.0"
rust-embed = "8.3.0"
ctrlc = "3.4.4"
reqwest = { version = "0.11", features = ["json", "blocking"] }
zip = "0.5"
