[package]
name = "rustmon"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["cargo", "derive"] }
crossterm = "0.27.0"
ctrlc = "3.4.4"
dirs = "5.0.1"
image = "0.25.1"
once_cell = "1.19.0"
rand = { version = "0.8.4", features = ["small_rng"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
rust-embed = "8.3.0"
serde_json = "1.0.115"
zip = "0.6.6"
