[package]
name = "rustmon"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.22", features = ["cargo"] }
crossterm = "0.27.0"
dirs = "5.0.1"
image = "0.25.1"
once_cell = "1.19.0"
rand = { version = "0.8.4", features = ["small_rng"] }
regex = "1.10.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rust-embed = "8.3.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
zip = "1.1.1"
